create listItem elements

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
 
         <!-- list items -->
         <ul class="to-do-list">
-          <li>
+          <!-- <li>
             <div>
               <input type="checkbox" class="check-list" name="list-item" />
               <input
@@ -57,8 +57,8 @@
             </div>
             <button type="buton">
               <i class="fa fa-ellipsis-vertical"></i>
-            </button>
-          </li>
+            </button> 
+          </li> -->
         </ul>
 
         <!-- clear completed button -->
@@ -67,5 +67,6 @@
         </div>
       </section>
     </main>
+    <script type="module" src="index.js"></script>
   </body>
 </html>
