Update dist HTML file

--- a/src/index.html
+++ b/src/index.html
@@ -30,36 +30,7 @@
         </form>
 
         <!-- list items -->
-        <ul class="to-do-list">
-          <!-- <li>
-            <div>
-              <input type="checkbox" class="check-list" name="list-item" />
-              <input
-                type="text"
-                name="list-item"
-                placeholder="Wash the dishes"
-                disabled
-              />
-            </div>
-            <button type="buton">
-              <i class="fa fa-ellipsis-vertical"></i>
-            </button>
-          </li>
-          <li>
-            <div>
-              <input type="checkbox" class="check-list" name="list-item" />
-              <input
-                type="text"
-                name="list-item"
-                placeholder="Wash the dishes"
-                disabled
-              />
-            </div>
-            <button type="buton">
-              <i class="fa fa-ellipsis-vertical"></i>
-            </button> 
-          </li> -->
-        </ul>
+        <ul class="to-do-list"></ul>
 
         <!-- clear completed button -->
         <div id="btn">
